@@ -1,29 +1,23 @@
 plugins {
     id 'groovy'
     id 'application'
-    id 'org.springframework.boot' version '2.7.5'
-    id 'io.spring.dependency-management' version '1.1.0'
-    id 'com.palantir.docker' version '0.34.0'
+    id 'org.springframework.boot' version '3.4.1'
+    id 'io.spring.dependency-management' version '1.1.7'
 }
 
 compileJava {
-    sourceCompatibility = JavaVersion.VERSION_13
-    targetCompatibility = JavaVersion.VERSION_13
-
-    //TODO Remove when split packages is no longer an issue
-    doFirst {
-        options.compilerArgs = ['--module-path', classpath.asPath]
-        classpath = files()
-    }
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 application {
-    mainClassName = 'pl.jojczykp.kafka_cqrs.persister.PersisterServiceMain'
+    mainClass = 'pl.jojczykp.kafka_cqrs.persister.PersisterServiceMain'
 }
 
-docker {
-    name 'jojczykp.pl/kafka-cqrs/persister-service:0.0.1'
-    files tasks.distTar.outputs
+tasks.register('buildDockerImage', Exec) {
+    dependsOn distTar
+    executable 'sh'
+    args '-c', "docker build -t jojczykp.pl/kafka-cqrs/${project.name}:0.0.1 ."
 }
 
 clean.doFirst {
@@ -32,41 +26,29 @@ clean.doFirst {
 
 test {
     useJUnitPlatform()
-    jvmArgs = [
-            '--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED',
-            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
-            '--add-opens=java.base/java.io=ALL-UNNAMED',
-            '--add-opens=java.base/java.nio=ALL-UNNAMED',
-            '--add-opens=java.base/java.lang=ALL-UNNAMED',
-            '--add-opens=java.base/java.util=ALL-UNNAMED',
-            '--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
-            '--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED'
-    ] //TODO Cassandra 4 - Remove when no longer needed
 }
 
 dependencies {
-    annotationProcessor 'org.projectlombok:lombok:1.18.24'
-    compileOnly 'org.projectlombok:lombok:1.18.24'
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
+    compileOnly 'org.projectlombok:lombok:1.18.36'
 
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.kafka:spring-kafka'
     implementation 'org.springframework.data:spring-data-cassandra'
-    implementation 'com.datastax.oss:java-driver-core:4.15.0'
+    implementation('org.apache.cassandra:java-driver-core:4.18.1') {
+        exclude group: 'com.datastax.oss', module: 'java-driver-shaded-guava'
+    }
 
-    implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'com.google.guava:guava:33.4.0-jre'
 
     testImplementation project(path: ':test-utils', configuration: 'default')
-    testImplementation 'org.codehaus.groovy:groovy:3.0.13'
+    testImplementation 'org.apache.groovy:groovy:4.0.25'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.spockframework:spock-spring:2.3-groovy-3.0'
-    testImplementation 'org.spockframework:spock-junit4:2.3-groovy-3.0'
+    testImplementation 'org.spockframework:spock-spring:2.4-M4-groovy-4.0'
+    testImplementation 'org.junit.platform:junit-platform-engine:1.11.3'
+    testImplementation 'org.junit.platform:junit-platform-launcher:1.11.3'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
-    testImplementation 'org.cassandraunit:cassandra-unit:4.3.1.0'
-    testImplementation 'net.java.dev.jna:jna:5.12.1'                         //TODO Cassandra 4 - Remove when no longer needed (https://stackoverflow.com/questions/68315912/how-to-start-cassandra-on-a-m1-macbook)
-    testImplementation 'org.apache.cassandra:cassandra-all:4.0.7'            //TODO Cassandra 4 - Remove when version 4 included in cassandra-unit-spring
-}
-
-configurations {
-    //TODO Remove when split packages is no longer an issue
-    implementation.exclude group: 'com.google.code.findbugs', module: 'jsr305'
+    testImplementation 'org.testcontainers:testcontainers:2.0.3'
+    testImplementation 'org.testcontainers:testcontainers-cassandra:2.0.3'
+    testImplementation 'org.testcontainers:testcontainers-spock:2.0.3'
 }
